updated index site

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 	<body>
 		<!-- Header Section -->
 		<header>
-			<h1>Aging Into</h1>
+			<h1>SAFE</h1>
 			<p>
-				A scholarship program for adolescents aging out of the foster
-				care program
+				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide <b>E</b>quity
 			</p>
 		</header>
 
@@ -51,34 +50,20 @@
 			</div>
 		</nav>
 		<!-- Main Content Area -->
+		<main>
 
-            <img class="hero" src="media/pexels-stanley-morales-1454360.jpg"></img>
+            <img class="hero" src="media/shutterstock_1139945933.jpg"></img>
 			<!-- About Section -->
 			<section id="about">
 				<h2>About Us</h2>
-				<p>
-					Welcome to our fundraising campaign. Here, we aim to make a
-					positive impact...
+				<p class="about-p">
+					We are a group of grad students at the University of Michigan advocating for better admissions and financial aide policy for undocumented immigrants. 
 				</p>
-				<!-- Include information about your cause, achievements, etc. -->
+				
 			</section>
 
-			
-
-			<!-- Contact Section -->
-			<section id="contact">
-				<h2>Contact Us</h2>
-				<p>
-					If you have any questions or inquiries, please feel free to
-					reach out to us...
-				</p>
-				<!-- Contact information like email, phone number, address, etc. -->
-			</section>
 		</main>
 
-		<!-- Footer Section -->
-		<footer>
-			<p>&copy; 2023 Your Fundraising Site</p>
-		</footer>
+	
 	</body>
 </html>
