--- a/issue.html
+++ b/issue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Fundraising Site</title>
+		<title>SAFE</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -10,19 +10,18 @@
 		/>
 	</head>
 	<body>
-        <!-- Header Section -->
+		<!-- Header Section -->
 		<header>
-			<h1>Aging Into</h1>
+			<h1>SAFE</h1>
 			<p>
-				A scholarship program for adolescents aging out of the foster
-				care program
+				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide <b>E</b>quity
 			</p>
 		</header>
 
 		<!-- Navigation Section -->
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="/agingOut.html">Home</a>
+				<a class="navbar-brand" href="/index.html">Home</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -37,14 +36,18 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="/apply.html">Apply</a>
+							<a class="nav-link" href="/issue.html">Issue</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/donate.html">Donate</a>
+							<a class="nav-link" href="/policy.html">Past Policy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/about.html">About</a>
+							<a class="nav-link" href="/who.html">Who's Who</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/plan.html">Plan of Action</a>
+						</li>
+						
 					</ul>
 				</div>
 			</div>
