added info for past policies

--- a/policy.html
+++ b/policy.html
@@ -14,7 +14,8 @@
 		<header>
 			<h1>SAFE</h1>
 			<p>
-				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide <b>E</b>quity
+				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide
+				<b>E</b>quity
 			</p>
 		</header>
 
@@ -39,45 +40,98 @@
 							<a class="nav-link" href="/issue.html">Issue</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/policy.html">Past Policy</a>
+							<a class="nav-link" href="/policy.html"
+								>Past Policy</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/who.html">Who's Who</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/plan.html">Plan of Action</a>
+							<a class="nav-link" href="/plan.html"
+								>Plan of Action</a
+							>
 						</li>
-						
 					</ul>
 				</div>
 			</div>
 		</nav>
-    <!-- Donation Form Section -->
-			<section id="donate">
-				<h2>Make a Donation</h2>
-				<form action="your_payment_processor_link" method="post">
-					<label for="name">Name:</label>
-					<input type="text" id="name" name="name" required /><br />
-
-					<label for="email">Email:</label>
-					<input
-						type="email"
-						id="email"
-						name="email"
-						required
-					/><br />
-
-					<label for="amount">Donation Amount:</label>
-					<input
-						type="number"
-						id="amount"
-						name="amount"
-						min="1"
-						required
-					/><br />
-
-					<button type="submit">Donate</button>
-				</form>
-			</section>
-</body>
+		<!-- Donation Form Section -->
+		<h1 class="claim-h1">Policy Journey</h1>
+		<img src="media/shutterstock_1391619104.jpg" class="hero" />
+		<section class="organizations">
+			<div class="who-section">
+				<h5>FERPA (1974)</h5>
+				<p>
+					Under FERPA, institutions may not disclose personally
+					identifiable information (PII) contained in education
+					records without the student’s written consent except under
+					certain conditions (see below). FERPA’s privacy protections
+					apply to undocumented students in the same way as other
+					domestic students (FERPA)
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>1976: MCL 380.1135(1)</h5>
+				<p>
+					Michigan law that revised school of code to make sure that
+					students who want to enroll who may not have a birth
+					certificate still can enroll in school. This comes with
+					providing proof of age and an explanation as to why there
+					isn’t a birth certificate. (Michigan)
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>Plyler v. Doe, 457 U.S. 202 (1982)</h5>
+				<p>
+					1982 court case that involved the US Supreme Court striking
+					down a Texas state statute that denied funding for education
+					of undocumented immigrant children (Court)
+					<br /><br />
+					The Court reasoned that illegal aliens and their children,
+					though not citizens of the United States or Texas, are
+					people "in any ordinary sense of the term" and, therefore,
+					are afforded Fourteenth Amendment protections. (Plyler)
+					<br /><br />
+					Opponents argued that the law was intended to prevent an
+					influx of illegal immigrants into Texas, to alleviate the
+					burdens on the educational system caused by educating
+					undocumented aliens, and to alleviate the burdens created by
+					educating children who are unlikely to remain in the state
+					and contribute to it. (Plyler v. Doe, 457)
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>
+					H.R.2202 - Immigration Control and Financial Responsibility
+					Act of 1996
+				</h5>
+				<p>
+					Prohibits means-tested public benefits, with specified
+					exceptions, to an alien who is not a permanent resident, a
+					refugee, a parolee, an asylee, an alien under withheld
+					deportation, or a battered individual. Examples include: no
+					access to in-state tuition (H.R.2202)
+					<br /><br />
+					Also amended the Immigration and Nationality Act-Prohibits
+					foreign student status for an alien in a public elementary
+					school or a publicly funded adult education program.
+					(H.R.2202)
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>DACA (2012)</h5>
+				<p>
+					The Deferred Action for Childhood Arrivals (DACA) was created to protect eligible young adults who were brought to the U.S. as children from deportation and to provide them with work authorization for temporary, renewable periods.  As of December 31, 2022, there were roughly 580,000 active DACA recipients from close to 200 different countries of birth residing all over the U.S. (Published: Apr 13, 2023)
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>DREAM Act (Development, Relief, and Education for Alien Minors (DREAM) Act)
+				</h5>
+				<p>
+					The goal of the DREAM Act is to provide current, former, and future undocumented high-school graduates and GED recipients a pathway to U.S. citizenship through college, work, or the armed services.  Unlike DACA, it gives undocumented immigrants a pathway to lawful permanent residency.  And they could satisfy this requirement by Higher education: “the person has acquired a degree from an institution of higher education or has completed at least two years, in good standing, in a program for a bachelor’s degree or higher degree in the United States.”  As of today the bill has failed to become law.  It most recently passed in the House as of 2010. (The DREAM act)
+				</p>
+			</div>
+		</section>
+	</body>
 </html>
