added references and issue page

--- a/issue.html
+++ b/issue.html
@@ -14,7 +14,8 @@
 		<header>
 			<h1>SAFE</h1>
 			<p>
-				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide <b>E</b>quity
+				<b>S</b>tudents for <b>A</b>dmissions and <b>F</b>inancial aide
+				<b>E</b>quity
 			</p>
 		</header>
 
@@ -39,55 +40,133 @@
 							<a class="nav-link" href="/issue.html">Issue</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/policy.html">Past Policy</a>
+							<a class="nav-link" href="/policy.html"
+								>Past Policy</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/who.html">Who's Who</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/plan.html">Plan of Action</a>
+							<a class="nav-link" href="/plan.html"
+								>Plan of Action</a
+							>
 						</li>
-						
+						<li class="nav-item">
+							<a class="nav-link" href="/references.html"
+								>References</a
+							>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-		<form>
-			<div class="mb-3">
-				<label for="exampleInputEmail1" class="form-label"
-					>Email address</label
-				>
-				<input
-					type="email"
-					class="form-control"
-					id="exampleInputEmail1"
-					aria-describedby="emailHelp"
-				/>
-				<div id="emailHelp" class="form-text">
-					We'll never share your email with anyone else.
-				</div>
+		<!-- Donation Form Section -->
+		<h1 class="claim-h1">What is the social problem?</h1>
+		<img
+			src="media/Screenshot 2024-02-19 at 6.45.36 AM.png"
+			class="hero hero-policy"
+		/>
+		<section class="organizations">
+			<div class="who-section">
+				<h5>Background and overview</h5>
+				<p>
+					Undocumented young people encounter significant obstacles,
+					including a scarcity of social, legal, financial, and
+					emotional support. Their limited opportunities force them to
+					exert more effort than their peers to succeed. While the
+					federal government does not forbid states from offering
+					federal financial aid to individuals who are not U.S. legal
+					citizens, each state varies in its approach to Undocumented
+					Students Seeking Higher Education. This includes differences
+					in policies related to enrollment, tuition, and financial
+					assistance. Undocumented students are barred from accessing
+					federal financial aid, which encompasses work-study
+					programs, loans, scholarships, and grants, leaving them to
+					finance their education independently. Most scholarships
+					require a Social Security number, leaving undocumented
+					students to rely on private scholarships that do not have
+					this requirement. The primary barrier to their education is
+					financial constraints. In addition to their educational
+					expenses, many undocumented students also need to
+					financially support their families or relatives back in
+					their home countries. Often, their parents face financial
+					difficulties and urge them to join the workforce as soon as
+					possible to contribute to the family's income.
+				</p>
 			</div>
-			<div class="mb-3">
-				<label for="exampleInputPassword1" class="form-label"
-					>Password</label
-				>
-				<input
-					type="password"
-					class="form-control"
-					id="exampleInputPassword1"
-				/>
+			<div class="who-section">
+				<h5>Beyond Higher Education</h5>
+				<p>
+					After completing their education, undocumented students face
+					the challenge of being unable to legally work in the United
+					States. Without access to federal financial aid, their
+					employment options are limited, as most jobs require a
+					Social Security number. The jobs available to them are
+					typically either illegal or low-paying. Discrimination
+					further hinders undocumented students from pursuing higher
+					education. Many conceal their immigration status due to
+					deportation fears, which prevents schools from recognizing
+					and assisting them. The combination of lack of family
+					support and stringent immigration laws not only diminishes
+					their opportunities to work legally in the U.S. but also
+					contributes to feelings of despair.
+				</p>
 			</div>
-			<div class="mb-3 form-check">
-				<input
-					type="checkbox"
-					class="form-check-input"
-					id="exampleCheck1"
-				/>
-				<label class="form-check-label" for="exampleCheck1"
-					>Check me out</label
-				>
+			<div class="who-section">
+				<h5>Overview: State of Michigan</h5>
+				<p>
+					In Michigan, certain public colleges and universities offer
+					in-state tuition rates to qualified undocumented residents,
+					including those under the DACA program. Michigan lacks a
+					uniform state policy that grants undocumented students
+					across the state the right to pay in-state tuition rates or
+					state financial aid. However, individual public universities
+					and community colleges, including the University of
+					Michigan, have used their independent governance to set
+					policies that allow undocumented students and those under
+					DACA to qualify for in-state tuition. For example, the Board
+					of Regents at Eastern Michigan University has implemented a
+					tuition equity policy ensuring undergraduate students,
+					whether they are from within the state, out-of-state, or
+					from another country, including undocumented, DACA
+					recipients, and refugees, are charged the same tuition
+					rates. While some institutions might not have formal
+					policies, they may still offer in-state tuition rates to
+					undocumented students through more informal practices.
+					Regarding refugee students, Michigan does not have specific
+					statewide policies to facilitate their access to in-state
+					tuition, and the availability of such benefits varies by
+					educational institution.
+				</p>
 			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
+			<br />
+			<div class="who-section">
+				<h4>What is the Historical Context?</h4>
+				<br />
+				<h5>Landmark Ruling</h5>
+				<p>
+					The 1982 Supreme Court decision in Plyler v. Doe is a landmark ruling that prohibits states from denying free public education to students based on their immigration status. This decision, grounded in the Equal Protection Clause of the Fourteenth Amendment, guarantees that all students, including undocumented ones, have the right to education from kindergarten through the 12th grade without discrimination. Currently, the United States is home to an estimated 11.3 million undocumented immigrants. Analysis by the Migration Policy Institute, using the United States Census Bureau data from 2012 to 2016, shows that about 8.63 million of these individuals come from Mexico, Central America, the Caribbean, and South America.
+
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>Current Statistics</h5>
+				<p>
+					Recent data from the 2021 American Community Survey reveals that there are over 408,000 undocumented students enrolled in U.S. colleges and universities, accounting for 1.9% of the total college student population. This figure is down 4.2% from 2019, which saw 427,000 undocumented students enrolled. The decline is attributed to various factors including the COVID-19 pandemic, economic challenges, and legal issues surrounding the Deferred Action for Childhood Arrivals (DACA) program. Furthermore, the number of students either holding DACA status or eligible for it has decreased from 182,000 in 2019 to 141,000 in 2021, making up only one-third of undocumented college students and 0.7% of the overall college population. Interestingly, only 5% to 10% of undocumented students pursue higher education.
+
+
+				</p>
+			</div>
+			<div class="who-section">
+				<h5>
+					Federal and State Laws
+				</h5>
+				<p>
+					To address the rights of undocumented immigrants, including their access to higher education, federal laws such as the Illegal Immigration Reform and Immigrant Responsibility Act of 1996, the Personal Responsibility and Work Opportunity Reconciliation Act of 1996, the DREAM Act of 2001, and DACA in 2012 have been enacted. From 2001 to 2019, legislation in 19 states has been passed to allow undocumented students to enroll in higher education and qualify for in-state tuition rates. Additionally, seven of these states provide state-based financial aid to undocumented students.
+
+				</p>
+			</div>
+		</section>
 	</body>
 </html>
