--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="/plan.html">Plan of Action</a>
 						</li>
-						
+						<li class="nav-item">
+							<a class="nav-link" href="/references.html"
+								>References</a
+							>
+						</li>
 					</ul>
 				</div>
 			</div>
