--- a/policy.html
+++ b/policy.html
@@ -52,6 +52,11 @@
 								>Plan of Action</a
 							>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/references.html"
+								>References</a
+							>
+						</li>
 					</ul>
 				</div>
 			</div>
