finished plan of action

--- a/plan.html
+++ b/plan.html
@@ -59,16 +59,28 @@
 		<!-- Main Content Area -->
 		<main>
 
-            <img class="hero" src="media/shutterstock_1139945933.jpg"></img>
+            <img class="hero" src="media/shutterstock_1907220997.jpg"></img>
 			<!-- About Section -->
-			<section id="about">
-				<h2>About Us</h2>
-				<p class="about-p">
-					We are a group of grad students at the University of Michigan advocating for better admissions and financial aide policy for undocumented immigrants. 
-				</p>
-				
-			</section>
-
+			<section class="organizations">
+				<div class="who-section">
+					<h5>University Level</h5>
+					<p>
+						We implore the University of Michigan to use more of their endowment to make up for the lack of federal financial aide that undocumented students may not receive
+					</p>
+				</div>
+				<div class="who-section">
+					<h5>State Level</h5>
+					<p>
+						We implore the State of Michigan to create laws that grant in state residency status to undocumented students who have lived in Michigan for 36 months before completing their high school diploma or GED such as states like Texas have
+					</p>
+				</div>
+				<div class="who-section">
+					<h5>Federal Level</h5>
+					<p>
+						We implore the United States of America to codify Plyer V. Doe and extend the protections through higher education in public institutions
+					</p>
+				</div>
+				</section>
 		</main>
 
 	
