--- a/plan.html
+++ b/plan.html
@@ -36,19 +36,19 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="/issue.html">Issue</a>
+							<a class="nav-link" href="/SAFE/issue.html">Issue</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/policy.html">Past Policy</a>
+							<a class="nav-link" href="/SAFE/policy.html">Past Policy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/who.html">Who's Who</a>
+							<a class="nav-link" href="/SAFE/who.html">Who's Who</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/plan.html">Plan of Action</a>
+							<a class="nav-link" href="/SAFE/plan.html">Plan of Action</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/references.html"
+							<a class="nav-link" href="/SAFE/references.html"
 								>References</a
 							>
 						</li>
