--- a/issue.html
+++ b/issue.html
@@ -22,7 +22,7 @@
 		<!-- Navigation Section -->
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="/index.html">Home</a>
+				<a class="navbar-brand" href="/SAFE/index.html">Home</a>
 				<button
 					class="navbar-toggler"
 					type="button"
